  - vm_cpu_info() and host_cpu_info()
    - Removed threshold for ready and wait. Therefore thresholds are no possible 
      without subselect.

- 26 Feb 2014 M.Fuerstenau version 0.9.10
  - Bugfixes.
    - Corrected typo in dc_runtime_info() line 660.
    - Corrected typo in help().
    - Corrected bug in datastore_volumes_info(). Giving absolute thresholds
      for a single volume was not possible. Fixed.
  - Removed print_usage(). Due to mass of parameters it is not possible to display
    a short usage message. Instead of that the output of the help is included
    in the package as a file.
  - Updated default timeout to 90 secs. to avoid timeouts.
  - Before accessing the session file (and lock file) we have a random sleep up
    7 secs.. This is to avoid a concurrent access in case of a monitor restart
    or a "Schedule a check of all services on this host"
  - In case of a locked session file the wait loop is not fix to 1 sec any more.
    Instead of this it uses a random period up to 5 sec.. So we minimize the risc
    of concurrent access.

- 7 Mar 2014 M.Fuerstenau version 0.9.11
  - Updated README
    - Section for removing HTML tags was reworked
  - Added blacklist to host_net_info() so that interfaces with -S net can
    be blacklisted.

- 11 Mar 2014 M.Fuerstenau version 0.9.12
  - Changed sleep() to usleep() and using now microseconds instead of seconds
  - So before accessing the session file (and lock file) we now have a random sleep
    up to 1500 milliseconds (default - see $ms_ts). This is to avoid a concurrent access
    in case of a monitor restart or a "Schedule a check of all services on this host"
    but takes much less time while having much more alternatives.
  - In case of a locked session file the wait loop is not fix to a random period up to
    5 sec. any more. Instead of this it uses also $ms_ts which means a max of 1.5 secs.
    instead of 5.
